[gd_scene load_steps=3 format=3 uid="uid://dtrbka1ef726o"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_bq345"]
[ext_resource type="AudioStream" uid="uid://bwwhg1uivss16" path="res://assets/sounds/die.wav" id="2_8rtp5"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_bq345")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="sfx_die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8rtp5")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
